--- a/game.html
+++ b/game.html
@@ -6,10 +6,23 @@
     <title>GAME DETAILS</title>
 </head>
 <body>
-    
+    <header> 
     <h1> Zelda Game Details</h1>
-    <div>
+    </header>
 
+    <main> 
+    <div id="gameDetails">
+        <h3 id="loading"> Loading...</h3>
+        <!--Aquí cargaremos la info de detalles del juego-->
     </div>
+    </main>
+
+    <footer>
+
+
+    </footer>
+    
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="./js/gamedetails.js"></script>
 </body>
 </html>
